# cpp_modules

./: CMakeLists.txt  README.md  application.cpp  application.cppm  conanfile.py  test.cppm  test2.cppm
core/: buffer.cppm  core.cppm
